--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "restful-api",
   "version": "1.0.0",
   "type": "module",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "start-dev": "node -r dotenv/config server.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/AbdulSamman/restful-api#readme",
   "dependencies": {
-    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongodb": "^4.9.1"
-  }
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.2"
+  },
+  "description": ""
 }
